--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@types/js-cookie": "^3.0.6",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.25",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
