--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-big-calendar": "^1.16.1",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "next": "^14.2.25",
     "prisma": "^6.5.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
   },
