--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "3001:3001"
     env_file:
-      - .env
+      - .env.docker
     depends_on:
       postgres:
         condition: service_healthy
